assets/css/style_f2024.css
/* ... */
.nav-menu ul {
  margin: 4px 0 0 0;
  padding: 10px;
  box-shadow: 0px 0px 30px rgba(127, 137, 161, 0.25);
  background: #191919;
  border-radius: 3px;
}

.nav-menu ul li {
  transition: 0.3s;
}

.nav-menu ul li a {
  padding: 10px;
  color: #fff;
  transition: 0.3s;
  display: block;
  font-size: 13px;
  text-transform: none;
  border-radius: 3px;
}

.nav-menu ul li:hover > a {
  background: #A31F34;
  color: #fff;
}

.nav-menu ul ul {
  margin: 0;
}

/* Mobile Nav Toggle */
#mobile-nav-toggle {
  position: fixed;
  right: 0;
  top: 0;
  z-index: 999;
  margin: 15px 15px 0 0;
  border: 0;
  background: none;
  font-size: 24px;
  display: none;
  transition: all 0.4s;
  outline: none;
  cursor: pointer;
}

#mobile-nav-toggle i {
  color: #191919;
}

@media (max-width: 991px) {
  #mobile-nav-toggle {
    display: inline;
  }
}

/* Mobile Nav Styling */
#mobile-nav {
  position: fixed;
  top: 0;
  padding-top: 18px;
  bottom: 0;
  z-index: 998;
  background: rgba(255, 255, 255, 1);
  left: -260px;
  width: 260px;
  overflow-y: auto;
  transition: 0.4s;
}

#mobile-nav ul {
  padding: 0;
  margin: 0;
  list-style: none;
}

#mobile-nav ul li {
  position: relative;
}

#mobile-nav ul li a {
  color: #A31F34;
  font-size: 17px;
  overflow: hidden;
  padding: 10px 22px 10px 15px;
  position: relative;
  text-decoration: none;
  width: 100%;
  display: block;
  outline: none;
}

#mobile-nav ul li a:hover {
  color: #A31F34;
}

#mobile-nav ul li li {
  padding-left: 30px;
}

#mobile-nav ul .menu-has-children i {
  position: absolute;
  right: 0;
  z-index: 99;
  padding: 15px;
  cursor: pointer;
  color: #A31F34;
}

#mobile-nav ul .menu-has-children i.fa-chevron-up {
  color: #A31F34;
}

#mobile-nav ul .menu-item-active {
  color: #A31F34;
}

#mobile-body-overly {
  width: 100%;
  height: 100%;
  z-index: 997;
  top: 0;
  left: 0;
  position: fixed;
  background: rgba(6, 12, 34, 0.8);
  display: none;
}

/* Mobile Nav body classes */
body.mobile-nav-active {
  overflow: hidden;
}

body.mobile-nav-active #mobile-nav {
  left: 0;
}

body.mobile-nav-active #mobile-nav-toggle {
  color: #A31F34;
}
/*--------------------------------------------------------------
# Snackbar
--------------------------------------------------------------*/

/* The snackbar - position it at the bottom and in the middle of the screen */
#snackbar {
  visibility: hidden; /* Hidden by default. Visible on click */
  min-width: 21px; /* Set a default minimum width */
  margin-left: -125px; /* Divide value of min-width by 2 */
  background-color: rgb(138, 24, 43); /* Black background color */
  color: #fff; /* White text color */
  text-align: center; /* Centered text */
  border-radius: 2px; /* Rounded borders */
  padding: 16px; /* Padding */
  position: fixed; /* Sit on top of the screen */
  z-index: 1; /* Add a z-index if needed */
  left: 50%; /* Center the snackbar */
  top: 100px; /* 30px from the top */
}

#x {
  position:absolute;
  top:1px;
  right:5px;
  font-size:10px;
  cursor:pointer;
}

#snackbar a {
  color:white;
}

/* Show the snackbar when clicking on a button (class added with JavaScript) */
#snackbar.show {
  visibility: visible; /* Show the snackbar */
  /* Add animation: Take 0.5 seconds to fade in and out the snackbar.
  However, delay the fade out process for 2.5 seconds */
  -webkit-animation: fadein 0.5s;
  animation: fadein 0.5s;
}
#snackbar.hide {
  -webkit-animation: fadeout 0.5s;
  animation: fadeout 0.5s;
}

/* Animations to fade the snackbar in and out */
@-webkit-keyframes fadein {
  from {top: 0; opacity: 0;}
  to {top: 100px; opacity: 1;}
}

@keyframes fadein {
  from {top: 0; opacity: 0;}
  to {top: 100px; opacity: 1;}
}

@-webkit-keyframes fadeout {
  from {top: 100px; opacity: 1; visibility: visible;;}
  to {top: 0; opacity: 0; visibility: hidden;;}
}

@keyframes fadeout {
  from {top: 100px; opacity: 1; visibility: visible;;}
  to {top: 0; opacity: 0; visibility: hidden;;}
}
/*--------------------------------------------------------------
# Intro Section
--------------------------------------------------------------*/
.powered {
  display:inline-block;
  height:3em;
  margin: 20px;
}
#intro {
  width: 100%;
  height: 75vh;
  /* background: url("../img/mit_bg.jpg") top center; */
  background: rgb(255, 210, 210) top center;
  background-size: contain;
  overflow: hidden;
  position: relative;
}

#intro .logo {
  height:3.5em;
}

@media (min-width: 1024px) {
  #intro {
    background-attachment: fixed;
  }
}

@media (max-width: 1024px) {

  #intro {
    background-size: cover;
  }
}

@media (max-width: 500px) {
  #intro {
    height: 90vh;
  }
  #about h2 {
    text-align: center;
  }
} 

@media (min-width: 1300px) {
  #wide-container {
    max-width: 1300px;
  }
} 
@media (max-width: 400px) {
  #intro {
    height: 75vh;
  }

  #intro .logo {
    height:2.5em;
  }
  #header #logo h1 {
    font-size: 14px;
  }
  .powered {
    height: 25px;
  }
}

#intro:before {
  content: "";
  background: rgba(246, 247, 253, 0.8);
  position: absolute;
  bottom: 0;
  top: 0;
  left: 0;
  right: 0;
}

#intro .intro-container {
  position: absolute;
  bottom: 0;
  left: 0;
  top: 90px;
  right: 0;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  text-align: center;
  padding: 0 15px;
}

@media (max-width: 991px) {
  #intro .intro-container {
    top: 70px;
  }
}

#intro h1 {
  color: #000000;
  font-family: "Raleway", sans-serif;
  font-size: 56px;
  font-weight: 600;
  text-transform: uppercase;
}

#intro h1 span {
  color: #A31F34;
}

@media (max-width: 991px) {
  #intro h1 {
    font-size: 34px;
  }
}

#intro p {
  color: #4e4e4e;
  font-weight: 700;
  font-size: 20px;
}

@media (max-width: 991px) {
  #intro p {
    font-size: 16px;
  }
}

#sub-heading {
  color: #4e4e4e;
  font-weight: 700;
  font-size: 25px!important;
}

@media (max-width: 991px) {
  #sub-heading {
    font-size: 20px!important;
  }
}
/* ... */

